# tools

./: Dockerfile  Makefile  index.yaml  lock.txt  requirements.txt
anthropic-model-provider/: main.py  requirements.txt  setup.py
anthropic-model-provider-go/: go.mod  main.go  tool.gpt
auth-providers-common/: go.mod  go.sum
azure-openai-model-provider/: tool.gpt
basic-auth/: main.go
bluesky/: package-lock.json  package.json  tool.gpt
browser/: tool.gpt
colly-scraper/: go.mod  go.sum
credential-stores/: go.mod  go.sum
database/: go.mod  go.sum  main.go  tool.gpt
deepseek-model-provider/: go.mod  main.go  tool.gpt
discord/: package-lock.json  package.json  tool.gpt
docs/: auth-providers.md
excel/: go.mod  go.sum  tool.gpt
file-operator/: file_content_handler.py  helper.py  load_text.py  requirements.txt  tool.gpt
file-reader/: helper.py  summarize.py  tool.gpt
file-summarizer/: helper.py  main.py  tool.gpt
firecrawl/: go.mod  main.go  tool.gpt
gemini/: main.py
gemini-vertex-model-provider/: main.go  main.py  tool.gpt  validate.py
generic-credential/: go.mod  go.sum  main.go
generic-openai-model-provider/: go.mod  main.go  tool.gpt
generic-responses-model-provider/: go.mod  main.go  (+1 more)
google/calendar/: README.md  example_client.py  main.py  pyproject.toml  requirements.txt  server.py  tool.gpt
google/calendar/app/: server.py
google/calendar/credential/: tool.gpt
google/calendar/tests/: test_server.py
google/calendar/tools/: calendar.py  event.py  helper.py
google/google-calendar-mcp/: README.md  pyproject.toml  server.py
(+445 files in other folders)
